--- a/app.json
+++ b/app.json
@@ -17,9 +17,13 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.itlventures.itl",
+      "buildNumber": "1.0.0"
     },
     "android": {
+      "package": "com.itlventures.itl",
+      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
